fix(sdk): remove scrollbar thumb hover state (#54)

--- a/packages/sdk/src/index.css
+++ b/packages/sdk/src/index.css
@@ -40,7 +40,6 @@
   --wb-scroll-width: 0.375rem;
   --wb-scroll-radius: 0.625rem;
   --wb-scroll-thumb-color: var(--ax-scrollbar-bg-default);
-  --wb-scroll-thumb-hover-color: var(--colors-gray-gray-500);
   --wb-scroll-track-color: transparent;
   --wb-font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
 }
@@ -53,9 +52,6 @@
   ::-webkit-scrollbar-track {
     border-radius: var(--wb-scroll-radius);
     background: var(--wb-scroll-track-color);
-  }
-  ::-webkit-scrollbar-thumb:hover {
-    background: var(--wb-scroll-thumb-hover-color);
   }
   ::-webkit-scrollbar-thumb {
     border-radius: var(--wb-scroll-radius);
